--- a/style.css
+++ b/style.css
@@ -117,8 +117,9 @@ ul {
 
 .container {
   width: 960px;
+  margin: 0 auto;
   padding: 20px 0;
-  }
+}
 
 .home {
   font-size: 19px;
